--- a/sass/components/input.scss
+++ b/sass/components/input.scss
@@ -3,7 +3,7 @@
 form {
   //border: 2px solid black;
   min-height: 20vh;
-  min-width: 40%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
 
@@ -18,7 +18,7 @@ form {
   }
 
   input {
-    min-width: 90%;
+    width: 90%;
     font-size: 1.5rem;
     padding: 0.5rem;
     border: none;
