--- a/sass/style.css
+++ b/sass/style.css
@@ -8,11 +8,40 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
-.bottom {
-  min-height: 60vh;
-  background-color: #161722;
+.todoContainer {
+  width: 40%;
+  position: absolute;
+  border-radius: 0.2rem;
+  top: 15rem;
+  background: #777a92;
+  height: 60vh;
+  overflow: auto;
+}
+.todoContainer .todo-div {
+  display: flex;
+  justify-content: space-between;
+  color: black;
+  background: #25273c;
+  margin-bottom: 0.1rem;
+  transition: all 0.5s ease-in-out;
+}
+.todoContainer .todo-div li {
+  flex: 1;
+  color: white;
+  align-self: center;
+}
+.todoContainer .todo-div .fa-circle:hover {
+  color: green;
+}
+
+.complete-btn,
+.trash-btn {
+  background: transparent;
+  padding: 1rem;
+  font-size: 1.5rem;
 }
 
 header {
@@ -25,7 +54,7 @@ header {
 
 form {
   min-height: 20vh;
-  min-width: 40%;
+  width: 40%;
   display: flex;
   align-items: flex-start;
 }
@@ -39,7 +68,7 @@ form button {
   border-bottom-left-radius: 0.3rem;
 }
 form input {
-  min-width: 90%;
+  width: 90%;
   font-size: 1.5rem;
   padding: 0.5rem;
   border: none;
@@ -61,10 +90,21 @@ body {
   font-size: 18px;
   font-family: "Josefin Sans", sans-serif;
   color: #fafafa;
+  min-height: 100vh;
+  background-color: #161722;
 }
 
-main {
-  min-height: 100vh;
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 2rem;
 }
 
 h1 {
@@ -73,7 +113,6 @@ h1 {
 }
 
 i {
-  color: #777a92;
   pointer-events: none;
   font-size: 1.55rem;
   padding: 0 0.5rem;
@@ -81,6 +120,36 @@ i {
 
 img {
   cursor: pointer;
+}
+
+button {
+  border: none;
+  background: transparent;
+  outline: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.fa-circle {
+  color: #777a92;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.fall {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.fa-times {
+  color: #777a92;
+}
+
+.line {
+  text-decoration: line-through;
+  color: #4d5066 !important;
 }
 
 /*# sourceMappingURL=style.css.map */
