--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,8 @@
 // Imports
 @import "./components/top.scss";
-@import "./components/bottom.scss";
+@import "./components/container.scss";
 @import "./components/header.scss";
 @import "./components/input.scss";
-@import "./components/container.scss";
 @import "./variables.scss";
 
 * {
@@ -18,24 +17,66 @@ body {
     family: "Josefin Sans", sans-serif;
   }
   color: $Very_Light_Gray;
+  min-height: 100vh;
+  background-color: $Very_Dark_Blue;
 }
 
-main {
-  min-height: 100vh;
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  border-radius: 2rem;
 }
 
 h1 {
-    font-size: 2rem;
-    letter-spacing: 1.5rem;
+  font-size: 2rem;
+  letter-spacing: 1.5rem;
 }
 
 i {
-    color: $Dark_Grayish_Blue;
-    pointer-events: none;
-    font-size: 1.55rem;
-    padding: 0 .5rem;
+  pointer-events: none;
+  font-size: 1.55rem;
+  padding: 0 0.5rem;
 }
 
 img {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+button {
+  border: none;
+  background: transparent;
+  outline: none;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.fa-circle {
+  color: $Dark_Grayish_Blue;
+}
+
+ul {
+  list-style-type: none;
+}
+
+// Fall animation on todo remove
+.fall {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.fa-times {
+  color: $Dark_Grayish_Blue;
+}
+
+// check animation
+.line {
+  text-decoration: line-through;
+  color: $Very_Dark_Grayish_Blue !important;
 }
