4. Added the filter functionality.

--- a/sass/components/container.scss
+++ b/sass/components/container.scss
@@ -3,18 +3,15 @@
 
 .todoContainer {
   width: 40%;
-  //border: 2px solid #fff;
   position: absolute;
   border-radius: 0.2rem;
   top: 15rem;
-  background: $Dark_Grayish_Blue;
   height: 60vh;
   overflow: auto;
 
   .todo-div {
     display: flex;
     justify-content: space-between;
-    color: black;
     background: $Very_Dark_Desaturated_Blue;
     margin-bottom: 0.1rem;
     transition: all 0.5s ease-in-out;
@@ -36,4 +33,18 @@
   background: transparent;
   padding: 1rem;
   font-size: 1.5rem;
+}
+
+// Tablet view
+@media only screen and (max-width: 768px) {
+  .todoContainer {
+    width: 70%;
+  }
+}
+
+// Mobile view
+@media only screen and (max-width: 600px) {
+  .todoContainer {
+    width: 90%;
+  }
 }
