--- a/sass/components/header.scss
+++ b/sass/components/header.scss
@@ -6,3 +6,17 @@ header {
     justify-content: space-between;
     align-items: center;
 }
+
+// Tablet view
+@media only screen and (max-width: 768px) {
+    header {
+        width: 70%;
+    }
+}
+
+// Mobile view
+@media only screen and (max-width: 600px) {
+    header {
+        width: 90%;
+    }
+}
