--- a/sass/components/input.scss
+++ b/sass/components/input.scss
@@ -30,3 +30,17 @@ form {
     color: #fff;
   }
 }
+
+// Tablet View
+@media only screen and (max-width: 768px) {
+    form {
+      width: 70%;
+    }
+  }
+
+// Mobile view
+@media only screen and (max-width: 600px) {
+  form {
+    width: 90%;
+  }
+}
