--- a/sass/components/top.scss
+++ b/sass/components/top.scss
@@ -10,3 +10,8 @@
   align-items: center;
   position: relative;
 }
+
+// day-mode
+.lightBg {
+  background-image: url("../images/bg-desktop-light.jpg");
+}
