--- a/sass/components/_input.scss
+++ b/sass/components/_input.scss
@@ -1,7 +1,6 @@
-@import "../variables.scss";
+@import "../_variables.scss";
 
 form {
-  //border: 2px solid black;
   min-height: 20vh;
   width: 40%;
   display: flex;
@@ -44,4 +43,3 @@ form {
     width: 90%;
   }
 }
-
